--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9487,7 +9489,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119192013831" list="$:/ControlPanel GettingStarted" modified="20191119192013832" title="$:/StoryList" revision="2" bag="default">
+<div created="20191119192013831" list="Welcome $:/ControlPanel GettingStarted" modified="20191119192735845" title="$:/StoryList" revision="3" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9547,6 +9549,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20191119192730256" modified="20191119192734063" title="$:/temp/search" revision="21" bag="default">
+<pre>welcome</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
