--- a/index.html
+++ b/index.html
@@ -155,10 +155,6 @@ Error message and password prompt
 
 <li>$:/plugins/tiddlywiki/highlight</li>
 
-<li>$:/state/tab-1749438307</li>
-
-<li>$:/state/tab-2065006209</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -170,8 +166,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -9386,16 +9380,16 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119192410842" modified="20191119192413314" title="$:/GitHub/Filename" revision="12" bag="default">
+<div created="20191119192410842" modified="20191119192414876" title="$:/GitHub/Filename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>index.html</pre>
 </div>
-<div created="20191119192420076" modified="20191119192439484" title="$:/GitHub/Path" revision="7" bag="default">
+<div created="20191119192420076" modified="20191119192440505" title="$:/GitHub/Path" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>/</pre>
 </div>
-<div created="20191119192332738" modified="20191119192403450" title="$:/GitHub/Repo" revision="27" bag="default">
+<div created="20191119192332738" modified="20191119192404515" title="$:/GitHub/Repo" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>sjoshi804/sjoshi804.github.io</pre>
 </div>
-<div created="20191119192037438" modified="20191119192038052" title="$:/GitHub/Username" revision="9" bag="default">
+<div created="20191119192037438" modified="20191119192039472" title="$:/GitHub/Username" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>sjoshi804</pre>
 </div>
 <div title="$:/isEncrypted" revision="0" bag="default">
@@ -9471,12 +9465,6 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119192015120" modified="20191119192015120" title="$:/state/tab-1749438307" revision="1" bag="default">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
-</div>
-<div created="20191119192016648" modified="20191119192540842" title="$:/state/tab-2065006209" revision="9" bag="default">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9489,7 +9477,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119192013831" list="Welcome $:/ControlPanel GettingStarted" modified="20191119192735845" title="$:/StoryList" revision="3" bag="default">
+<div list="GettingStarted" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9549,9 +9537,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20191119192730256" modified="20191119192734063" title="$:/temp/search" revision="21" bag="default">
-<pre>welcome</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
