--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@ Error message and password prompt
 
 <li>$:/plugins/tiddlywiki/highlight</li>
 
+<li>$:/state/sidebar</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -9465,6 +9469,12 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20191119195942281" modified="20191119195943496" title="$:/state/sidebar" revision="2" bag="default">
+<pre>yes</pre>
+</div>
+<div created="20191119195945598" modified="20191119195947322" title="$:/state/tab/sidebar--595412856" revision="3" bag="default">
+<pre>$:/core/ui/SideBar/More</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9477,7 +9487,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="GettingStarted" title="$:/StoryList" revision="1" bag="default">
+<div created="20191119195950788" list="[[Discovery of Useful Questions as Auxiliary Tasks]] GettingStarted" modified="20191119195950789" title="$:/StoryList" revision="4" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9647,8 +9657,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119194205914" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>this is a change</pre>
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119200153560" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>!Background Information
+</pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
 <pre>Ingredients:
