Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ Error message and password prompt
 
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
 
+<li>GVF</li>
+
 <li>Slow Cooker Chicken Curry</li>
 
 <li>Welcome</li>
@@ -9487,7 +9489,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119195950788" list="[[Discovery of Useful Questions as Auxiliary Tasks]] GettingStarted" modified="20191119195950789" title="$:/StoryList" revision="4" bag="default">
+<div created="20191119195950788" list="" modified="20191119200648965" title="$:/StoryList" revision="17" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9657,9 +9659,12 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119200153560" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="1" bag="default">
-<pre>!Background Information
-</pre>
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119200545229" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="4" bag="default">
+<pre>!!Background Information
+[[GVF]]</pre>
+</div>
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119200453331" tags="[[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>General Value Function</pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
 <pre>Ingredients:
