--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Filename</li>
 
 <li>$:/GitHub/Path</li>
@@ -155,9 +157,7 @@ Error message and password prompt
 
 <li>$:/plugins/tiddlywiki/highlight</li>
 
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
+<li>$:/state/tab-1749438307</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -9386,6 +9386,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20191119201524845" modified="20191119201526041" title="$:/DefaultTiddlers" revision="8" bag="default">
+<pre>Welcome
+</pre>
+</div>
 <div created="20191119192410842" modified="20191119192414876" title="$:/GitHub/Filename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>index.html</pre>
 </div>
@@ -9471,11 +9475,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119195942281" modified="20191119195943496" title="$:/state/sidebar" revision="2" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20191119195945598" modified="20191119195947322" title="$:/state/tab/sidebar--595412856" revision="3" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20191119201520226" modified="20191119201521184" title="$:/state/tab-1749438307" revision="2" bag="default">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9489,7 +9490,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119195950788" list="" modified="20191119200648965" title="$:/StoryList" revision="17" bag="default">
+<div created="20191119201517367" list="$:/ControlPanel GettingStarted" modified="20191119201517367" title="$:/StoryList" revision="2" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9659,11 +9660,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119200545229" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="4" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119200546296" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!Background Information
 [[GVF]]</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119200453331" tags="[[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119200454391" tags="[[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
