Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>My TiddlyWiki — a non-linear personal web notebook</title>
+<title>Sid's TiddlyWiki — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -157,6 +157,8 @@ Error message and password prompt
 
 <li>$:/plugins/tiddlywiki/highlight</li>
 
+<li>$:/SiteTitle</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/status/IsAnonymous</li>
@@ -170,6 +172,8 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -9475,6 +9479,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20191119201741688" modified="20191119201750457" title="$:/SiteTitle" revision="21" bag="default">
+<pre>Sid's ~TiddlyWiki</pre>
+</div>
 <div created="20191119201520226" modified="20191119201521184" title="$:/state/tab-1749438307" revision="2" bag="default">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
@@ -9490,7 +9497,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119201517367" list="$:/ControlPanel GettingStarted" modified="20191119201517367" title="$:/StoryList" revision="2" bag="default">
+<div created="20191119201517367" list="Welcome $:/ControlPanel GettingStarted" modified="20191119201544793" title="$:/StoryList" revision="5" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9550,6 +9557,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20191119201541148" modified="20191119201542015" title="$:/temp/search" revision="7" bag="default">
+<pre>Welcome</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9688,9 +9698,10 @@ Instructions:
 - Add salt to taste
 - Add coriander leaves on top if available</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191119180450185" tags="tiddlywiki" title="Welcome" type="text/plain" revision="0" bag="default">
-<pre>Hi, this is the first note of this wiki!
-</pre>
+<div author="Siddharth Joshi" created="20191119180323660" modified="20191119201724892" tags="tiddlywiki" title="Welcome" type="text/plain" revision="1" bag="default">
+<pre>Hi, welcome to my TiddlyWiki!
+This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
+Enjoy!</pre>
 </div>
 
 </div>
