--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ Error message and password prompt
 
 <li>$:/state/tab-1749438307</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -182,6 +184,8 @@ Error message and password prompt
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
 
 <li>GVF</li>
+
+<li>Meta Learning</li>
 
 <li>Slow Cooker Chicken Curry</li>
 
@@ -9485,6 +9489,9 @@ Error message and password prompt
 <div created="20191119201520226" modified="20191119201521184" title="$:/state/tab-1749438307" revision="2" bag="default">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
+<div created="20191119202042902" modified="20191119202350878" title="$:/state/tab/sidebar--595412856" revision="7" bag="default">
+<pre>$:/core/ui/SideBar/More</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9497,7 +9504,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119201517367" list="Welcome $:/ControlPanel GettingStarted" modified="20191119201544793" title="$:/StoryList" revision="5" bag="default">
+<div created="20191119201517367" list="" modified="20191119202308089" title="$:/StoryList" revision="33" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9558,8 +9565,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119201541148" modified="20191119201542015" title="$:/temp/search" revision="7" bag="default">
-<pre>Welcome</pre>
+<div created="20191119201541148" modified="20191119202046743" title="$:/temp/search" revision="8" bag="default">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9670,12 +9677,16 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119200546296" tags="deepmind research [[intelligence project]] [[reinforcement learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>!!Background Information
-[[GVF]]</pre>
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119202306496" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="5" bag="default">
+<pre>!!! Background Information
+# [[GVF]]
+# [[Meta Learning]]</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119200454391" tags="[[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202317192" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>General Value Function</pre>
+</div>
+<div created="20191119202245097" modified="20191119202441195" tags="[[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" revision="3" bag="default">
+<pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
 <pre>Ingredients:
