Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -159,10 +159,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/tab-1749438307</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -184,6 +180,8 @@ Error message and password prompt
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
 
 <li>GVF</li>
+
+<li>How to Contribute?</li>
 
 <li>Meta Learning</li>
 
@@ -9394,9 +9392,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119201524845" modified="20191119201526041" title="$:/DefaultTiddlers" revision="8" bag="default">
+<div created="20191119201524845" modified="20191119211519383" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="20" bag="default">
 <pre>Welcome
-</pre>
+How to Contribute?</pre>
 </div>
 <div created="20191119192410842" modified="20191119192414876" title="$:/GitHub/Filename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>index.html</pre>
@@ -9483,14 +9481,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119201741688" modified="20191119201750457" title="$:/SiteTitle" revision="21" bag="default">
+<div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
-</div>
-<div created="20191119201520226" modified="20191119201521184" title="$:/state/tab-1749438307" revision="2" bag="default">
-<pre>$:/core/ui/ControlPanel/Info</pre>
-</div>
-<div created="20191119202042902" modified="20191119202350878" title="$:/state/tab/sidebar--595412856" revision="7" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -9504,7 +9496,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119201517367" list="" modified="20191119202308089" title="$:/StoryList" revision="33" bag="default">
+<div created="20191119211513733" list="$:/ControlPanel [[How to Contribute?]] Welcome" modified="20191119211513733" title="$:/StoryList" revision="6" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9552,11 +9544,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9565,7 +9557,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119201541148" modified="20191119202046743" title="$:/temp/search" revision="8" bag="default">
+<div created="20191119211050425" modified="20191119211051608" title="$:/temp/search" revision="8" bag="default">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
@@ -9677,15 +9669,26 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119202306496" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="5" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119202307569" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Background Information
 # [[GVF]]
 # [[Meta Learning]]</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202317192" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202318253" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div created="20191119202245097" modified="20191119202441195" tags="[[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" revision="3" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" modified="20191119211508018" tags="introduction" title="How to Contribute?" type="text/plain" revision="1" bag="default">
+<pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new note
+Once you're done editing, save your note and then click the save button on the left panel. 
+
+You can also:
+- add tags that help group your notes with other notes and make searching easier
+- link to other notes by using the syntax ~[[Note Name]] 
+- add an author by adding a new field for author
+- change type of note
+and many more things that you can look up by googling tiddlywiki</pre>
+</div>
+<div created="20191119202245097" modified="20191119202442257" tags="[[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
@@ -9709,7 +9712,7 @@ Instructions:
 - Add salt to taste
 - Add coriander leaves on top if available</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191119201724892" tags="tiddlywiki" title="Welcome" type="text/plain" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191119180323660" modified="20191119211150699" tags="introduction" title="Welcome" type="text/plain" revision="1" bag="default">
 <pre>Hi, welcome to my TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
