Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -171,8 +171,6 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
-<li>$:/temp/search</li>
-
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9392,9 +9390,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119201524845" modified="20191119211519383" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="20" bag="default">
+<div created="20191119201524845" modified="20191119211638996" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="4" bag="default">
 <pre>Welcome
-How to Contribute?</pre>
+[[How to Contribute?]]</pre>
 </div>
 <div created="20191119192410842" modified="20191119192414876" title="$:/GitHub/Filename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>index.html</pre>
@@ -9496,7 +9494,7 @@ How to Contribute?</pre>
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119211513733" list="$:/ControlPanel [[How to Contribute?]] Welcome" modified="20191119211513733" title="$:/StoryList" revision="6" bag="default">
+<div created="20191119211633635" list="$:/ControlPanel Welcome" modified="20191119211633635" title="$:/StoryList" revision="5" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9556,9 +9554,6 @@ How to Contribute?</pre>
         }
     }
 }</pre>
-</div>
-<div created="20191119211050425" modified="20191119211051608" title="$:/temp/search" revision="8" bag="default">
-<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9677,7 +9672,7 @@ How to Contribute?</pre>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202318253" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20191119211508018" tags="introduction" title="How to Contribute?" type="text/plain" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" modified="20191119211509214" tags="introduction" title="How to Contribute?" type="text/plain" revision="0" bag="default">
 <pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new note
 Once you're done editing, save your note and then click the save button on the left panel. 
 
@@ -9712,7 +9707,7 @@ Instructions:
 - Add salt to taste
 - Add coriander leaves on top if available</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191119211150699" tags="introduction" title="Welcome" type="text/plain" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191119180323660" modified="20191119211151805" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
 <pre>Hi, welcome to my TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
