Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9390,7 +9390,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191119201524845" modified="20191119211638996" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="4" bag="default">
+<div created="20191119201524845" modified="20191119211640903" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Welcome
 [[How to Contribute?]]</pre>
 </div>
@@ -9494,7 +9494,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191119211633635" list="$:/ControlPanel Welcome" modified="20191119211633635" title="$:/StoryList" revision="5" bag="default">
+<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9542,11 +9542,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
