Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9542,11 +9542,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9664,10 +9664,11 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191119202307569" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120004847804" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Background Information
 # [[GVF]]
-# [[Meta Learning]]</pre>
+# [[Meta Learning]]
+# </pre>
 </div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202318253" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
