--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
+<li>$:/state/tab/moresidebar-1850697562</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -175,6 +181,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Auxiliary Tasks in Reinforcement Learning</li>
+
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
 
 <li>GVF</li>
@@ -182,6 +190,8 @@ Error message and password prompt
 <li>How to Contribute?</li>
 
 <li>Meta Learning</li>
+
+<li>Meta-Learning via Meta-Gradients</li>
 
 <li>Slow Cooker Chicken Curry</li>
 
@@ -9482,6 +9492,15 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20191120061908450" modified="20191120061908450" title="$:/state/showeditpreview" revision="1" bag="default">
+<pre>yes</pre>
+</div>
+<div created="20191120062507533" modified="20191120062508865" title="$:/state/tab/moresidebar-1850697562" revision="2" bag="default">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
+</div>
+<div created="20191120062503400" modified="20191120062503400" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
+<pre>$:/core/ui/SideBar/More</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9494,7 +9513,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
+<div created="20191120061758161" list="[[Discovery of Useful Questions as Auxiliary Tasks]] Welcome [[How to Contribute?]]" modified="20191120061758161" title="$:/StoryList" revision="3" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9664,11 +9683,48 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120004847804" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>!!! Background Information
+<div created="20191120052924192" modified="20191120053009067" tags="research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
+</div>
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120062446820" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]] incomplete [[needs formatting]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>!!! Link to Paper
+https://arxiv.org/pdf/1909.04607v1
+
+!!! Overview
+Meta-Reinforcement Learning technique that attempts to find 'useful questions' i.e. general value functions (GVFs) in this case, which when learnt as auxiliary tasks build representations that help main task learning. This paper uses meta-gradients (gradient of the meta-parameters for the learning task to learn these GVF questions.
+
+!!! Background Information
 # [[GVF]]
 # [[Meta Learning]]
-# </pre>
+# [[Auxiliary Tasks|Auxiliary Tasks in Reinforcement Learning]]
+# [[Meta-Gradients|Meta-Learning via Meta-Gradients]]
+
+!!! Neural Network Architecture
+tbd, merge section describing answer and 
+
+!!! Multi-Step Meta-Gradient Discovery of Questions for Auxiliary Tasks Algorithm
+
+Initialize parameters θ, η
+
+for t = 1, 2, · · · , N do
+
+    θt, 0 ← θt
+
+    for k = 1, 2, · · · , L do
+
+        Generate experience using parameters θt, k−1
+
+end for
+
+ηt+1 ← Update meta-parameter using gradient descent with experience as dependent variable
+
+θt+1 ← θt,L
+
+end for
+
+!!! Multi-Step Meta-Gradients
+tbd
+</pre>
 </div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202318253" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
@@ -9685,6 +9741,9 @@ You can also:
 and many more things that you can look up by googling tiddlywiki</pre>
 </div>
 <div created="20191119202245097" modified="20191119202442257" tags="[[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre></pre>
+</div>
+<div created="20191120053237171" modified="20191120053332362" tags="research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
