Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/RelinkOnRename</li>
+
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/export-tiddler</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -159,7 +163,7 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/showeditpreview</li>
+<li>$:/state/tab--591103398</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
 
@@ -177,6 +181,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -184,6 +190,8 @@ Error message and password prompt
 <li>Auxiliary Tasks in Reinforcement Learning</li>
 
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
+
+<li>Draft of 'How to Contribute?'</li>
 
 <li>GVF</li>
 
@@ -194,6 +202,12 @@ Error message and password prompt
 <li>Meta-Learning via Meta-Gradients</li>
 
 <li>Slow Cooker Chicken Curry</li>
+
+<li>UCLA CS M282A - Cryptography 1</li>
+
+<li>UCLA Math 115A - Linear Algebra</li>
+
+<li>UCLA Math 131AH - Real Analysis</li>
 
 <li>Welcome</li>
 
@@ -207,6 +221,12 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20191121010924297" modified="20191121010924297" title="$:/config/RelinkOnRename" revision="1" bag="default">
+<pre>yes</pre>
+</div>
+<div created="20191121032312480" modified="20191121032312480" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/export-tiddler" revision="1" bag="default">
+<pre>show</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9492,13 +9512,13 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20191120061908450" modified="20191120061908450" title="$:/state/showeditpreview" revision="1" bag="default">
-<pre>yes</pre>
+<div created="20191121032308855" modified="20191121032308855" title="$:/state/tab--591103398" revision="1" bag="default">
+<pre>$:/core/ui/TiddlerInfo/Tools</pre>
 </div>
-<div created="20191120062507533" modified="20191120062508865" title="$:/state/tab/moresidebar-1850697562" revision="2" bag="default">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20191121010752799" modified="20191121010752799" title="$:/state/tab/moresidebar-1850697562" revision="1" bag="default">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20191120062503400" modified="20191120062503400" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
+<div created="20191120202620238" modified="20191121032239840" title="$:/state/tab/sidebar--595412856" revision="15" bag="default">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
@@ -9513,7 +9533,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191120061758161" list="[[Discovery of Useful Questions as Auxiliary Tasks]] Welcome [[How to Contribute?]]" modified="20191120061758161" title="$:/StoryList" revision="3" bag="default">
+<div created="20191120202633011" list="[[Meta Learning]] [[Draft of 'How to Contribute?']] GVF [[Discovery of Useful Questions as Auxiliary Tasks]] [[Auxiliary Tasks in Reinforcement Learning]]" modified="20191121032245818" title="$:/StoryList" revision="91" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9573,6 +9593,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20191120202608407" modified="20191120202713141" title="$:/temp/search" revision="31" bag="default">
+<pre> </pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9683,10 +9706,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191120052924192" modified="20191120053009067" tags="research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20191120052924192" modified="20191121010446097" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre></pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120062446820" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]] incomplete [[needs formatting]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120062447902" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]] incomplete [[needs formatting]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Link to Paper
 https://arxiv.org/pdf/1909.04607v1
 
@@ -9726,10 +9749,7 @@ end for
 tbd
 </pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191119202318253" tags="[[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
-<pre>General Value Function</pre>
-</div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20191119211509214" tags="introduction" title="How to Contribute?" type="text/plain" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" draft.of="How to Contribute?" draft.title="How to Contribute?" modified="20191121032250145" tags="introduction" title="Draft of 'How to Contribute?'" type="text/plain" revision="37" bag="default">
 <pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new note
 Once you're done editing, save your note and then click the save button on the left panel. 
 
@@ -9740,10 +9760,24 @@ You can also:
 - change type of note
 and many more things that you can look up by googling tiddlywiki</pre>
 </div>
-<div created="20191119202245097" modified="20191119202442257" tags="[[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010431255" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>General Value Function</pre>
+</div>
+<div author="Siddharth Joshi" created="20191119211052677" modified="20191121010650928" tags="introduction" title="How to Contribute?" type="text/plain" revision="3" bag="default">
+<pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new note
+Once you're done editing, save your note and then click the save button on the left panel. 
+
+You can also:
+- add tags that help group your notes with other notes and make searching easier
+- link to other notes by using the syntax ~[[Note Name]] 
+- add an author by adding a new field for author
+- change type of note
+and many more things that you can look up by googling tiddlywiki</pre>
+</div>
+<div created="20191119202245097" modified="20191121010412346" tags="incomplete [[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191120053237171" modified="20191120053332362" tags="research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20191120053237171" modified="20191121010455531" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
@@ -9767,8 +9801,36 @@ Instructions:
 - Add salt to taste
 - Add coriander leaves on top if available</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191119211151805" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
-<pre>Hi, welcome to my TiddlyWiki!
+<div created="20191121010859851" modified="20191121011219594" tags="" title="UCLA CS M282A - Cryptography 1" revision="1" bag="default">
+<pre></pre>
+</div>
+<div author="Siddharth Joshi" created="20191120202501607" modified="20191121010926718" tags="incomplete math [[linear algebra]] ucla" title="UCLA Math 115A - Linear Algebra" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>!!! Syllabus
+# [[Vector Spaces]]
+# [[Linear Transformations]]
+# [[Determinants]]
+# [[Diagonalization]]
+# [[Inner Products]]</pre>
+</div>
+<div author="Siddharth Joshi" created="20191120203243535" modified="20191121010939885" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<pre>!!! Syllabus
+# [[Basic Logic | For Every and There Exists]]
+# [[Natural Numbers]]
+# [[Induction]]
+# [[Equivalence Relations]]
+# [[Integers]]
+# [[Rational Numbers]]
+# [[Ordered Fields]]
+# [[Real Numbers]]
+# [[Sequences]]
+# [[Limsup and Liminf]]
+# [[Series]]
+# [[Rearrangements of Series]]
+# [[Functions]]
+# [[Cardinality]]</pre>
+</div>
+<div author="Siddharth Joshi" created="20191119180323660" modified="20191121010636408" tags="introduction" title="Welcome" type="text/plain" revision="4" bag="default">
+<pre>Hi, welcome to my ~TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
 </div>
