--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/tab--591103398</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
@@ -190,8 +192,6 @@ Error message and password prompt
 <li>Auxiliary Tasks in Reinforcement Learning</li>
 
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
-
-<li>Draft of 'How to Contribute?'</li>
 
 <li>GVF</li>
 
@@ -9512,6 +9512,9 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
+<div created="20191121032730844" modified="20191121032730844" title="$:/state/showeditpreview" revision="1" bag="default">
+<pre>yes</pre>
+</div>
 <div created="20191121032308855" modified="20191121032308855" title="$:/state/tab--591103398" revision="1" bag="default">
 <pre>$:/core/ui/TiddlerInfo/Tools</pre>
 </div>
@@ -9533,7 +9536,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191120202633011" list="[[Meta Learning]] [[Draft of 'How to Contribute?']] GVF [[Discovery of Useful Questions as Auxiliary Tasks]] [[Auxiliary Tasks in Reinforcement Learning]]" modified="20191121032245818" title="$:/StoryList" revision="91" bag="default">
+<div created="20191120202633011" list="[[How to Contribute?]]" modified="20191121032245818" title="$:/StoryList" revision="102" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9749,30 +9752,23 @@ end for
 tbd
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" draft.of="How to Contribute?" draft.title="How to Contribute?" modified="20191121032250145" tags="introduction" title="Draft of 'How to Contribute?'" type="text/plain" revision="37" bag="default">
-<pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new note
-Once you're done editing, save your note and then click the save button on the left panel. 
-
-You can also:
-- add tags that help group your notes with other notes and make searching easier
-- link to other notes by using the syntax ~[[Note Name]] 
-- add an author by adding a new field for author
-- change type of note
-and many more things that you can look up by googling tiddlywiki</pre>
-</div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010431255" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20191121010650928" tags="introduction" title="How to Contribute?" type="text/plain" revision="3" bag="default">
-<pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new note
-Once you're done editing, save your note and then click the save button on the left panel. 
+<div author="Siddharth Joshi" created="20191119211052677" modified="20191121032930827" tags="introduction" title="How to Contribute?" type="text/plain" revision="7" bag="default">
+<pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new 'tiddler'
+
+Once you're done editing, save your tiddler and then click the export button (the one with the upward arrow - 2nd button from the left on the top right of your tiddler) and email the tiddler to me at sjoshi804@gmail.com (I'll go ahead and add it to the wiki!)
 
 You can also:
-- add tags that help group your notes with other notes and make searching easier
-- link to other notes by using the syntax ~[[Note Name]] 
+- add tags that help group your tiddler with other tiddlers and make searching easier
+- link to other tiddlers by using the syntax ~[[Note Name]] 
 - add an author by adding a new field for author
-- change type of note
-and many more things that you can look up by googling tiddlywiki</pre>
+- write tiddlers that are plain text (like this) or in tiddlywiki's markup format by changing the type (using the dropdown at the bottom of your tiddler)
+
+and many more things that you can look up by googling tiddlywiki
+
+Thanks for contributing!</pre>
 </div>
 <div created="20191119202245097" modified="20191121010412346" tags="incomplete [[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre></pre>
