--- a/index.html
+++ b/index.html
@@ -163,14 +163,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/tab--591103398</li>
-
-<li>$:/state/tab/moresidebar-1850697562</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -182,8 +174,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -221,10 +211,10 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20191121010924297" modified="20191121010924297" title="$:/config/RelinkOnRename" revision="1" bag="default">
+<div created="20191121010924297" modified="20191121010925327" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>yes</pre>
 </div>
-<div created="20191121032312480" modified="20191121032312480" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/export-tiddler" revision="1" bag="default">
+<div created="20191121032312480" modified="20191121032313532" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/export-tiddler" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>show</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.21" revision="0" bag="default">
@@ -9512,18 +9502,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20191121032730844" modified="20191121032730844" title="$:/state/showeditpreview" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20191121032308855" modified="20191121032308855" title="$:/state/tab--591103398" revision="1" bag="default">
-<pre>$:/core/ui/TiddlerInfo/Tools</pre>
-</div>
-<div created="20191121010752799" modified="20191121010752799" title="$:/state/tab/moresidebar-1850697562" revision="1" bag="default">
-<pre>$:/core/ui/MoreSideBar/All</pre>
-</div>
-<div created="20191120202620238" modified="20191121032239840" title="$:/state/tab/sidebar--595412856" revision="15" bag="default">
-<pre>$:/core/ui/SideBar/More</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9536,7 +9514,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20191120202633011" list="[[How to Contribute?]]" modified="20191121032245818" title="$:/StoryList" revision="102" bag="default">
+<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9596,9 +9574,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20191120202608407" modified="20191120202713141" title="$:/temp/search" revision="31" bag="default">
-<pre> </pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9709,7 +9684,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20191120052924192" modified="20191121010446097" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20191120052924192" modified="20191121010447190" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119182457568" modified="20191120062447902" tags="deepmind research [[intelligence project]] [[reinforcement learning]] [[machine learning]] incomplete [[needs formatting]]" title="Discovery of Useful Questions as Auxiliary Tasks" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -9752,10 +9727,10 @@ end for
 tbd
 </pre>
 </div>
-<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010431255" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20191121032930827" tags="introduction" title="How to Contribute?" type="text/plain" revision="7" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" modified="20191121032931905" tags="introduction" title="How to Contribute?" type="text/plain" revision="0" bag="default">
 <pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new 'tiddler'
 
 Once you're done editing, save your tiddler and then click the export button (the one with the upward arrow - 2nd button from the left on the top right of your tiddler) and email the tiddler to me at sjoshi804@gmail.com (I'll go ahead and add it to the wiki!)
@@ -9770,10 +9745,10 @@ and many more things that you can look up by googling tiddlywiki
 
 Thanks for contributing!</pre>
 </div>
-<div created="20191119202245097" modified="20191121010412346" tags="incomplete [[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20191119202245097" modified="20191121010413406" tags="incomplete [[intelligence project]] [[machine learning]] [[meta learning]]" title="Meta Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20191120053237171" modified="20191121010455531" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20191120053237171" modified="20191121010456596" tags="incomplete research [[intelligence project]] [[meta learning]]" title="Meta-Learning via Meta-Gradients" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
 <div author="Siddharth Joshi" created="20191119181730637" modified="20191119182440762" tags="recipe" title="Slow Cooker Chicken Curry" type="text/plain" revision="0" bag="default">
@@ -9797,10 +9772,10 @@ Instructions:
 - Add salt to taste
 - Add coriander leaves on top if available</pre>
 </div>
-<div created="20191121010859851" modified="20191121011219594" tags="" title="UCLA CS M282A - Cryptography 1" revision="1" bag="default">
+<div created="20191121010859851" modified="20191121011220661" tags="" title="UCLA CS M282A - Cryptography 1" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div author="Siddharth Joshi" created="20191120202501607" modified="20191121010926718" tags="incomplete math [[linear algebra]] ucla" title="UCLA Math 115A - Linear Algebra" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191120202501607" modified="20191121010927794" tags="incomplete math [[linear algebra]] ucla" title="UCLA Math 115A - Linear Algebra" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Vector Spaces]]
 # [[Linear Transformations]]
@@ -9808,7 +9783,7 @@ Instructions:
 # [[Diagonalization]]
 # [[Inner Products]]</pre>
 </div>
-<div author="Siddharth Joshi" created="20191120203243535" modified="20191121010939885" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191120203243535" modified="20191121010940956" tags="incomplete [[real analysis]] math ucla" title="UCLA Math 131AH - Real Analysis" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
 # [[Basic Logic | For Every and There Exists]]
 # [[Natural Numbers]]
@@ -9825,7 +9800,7 @@ Instructions:
 # [[Functions]]
 # [[Cardinality]]</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191121010636408" tags="introduction" title="Welcome" type="text/plain" revision="4" bag="default">
+<div author="Siddharth Joshi" created="20191119180323660" modified="20191121010637476" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
 <pre>Hi, welcome to my ~TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
