Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/full-screen</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/export-tiddler</li>
@@ -179,6 +185,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/view</li>
+
 <li>Auxiliary Tasks in Reinforcement Learning</li>
 
 <li>Discovery of Useful Questions as Auxiliary Tasks</li>
@@ -211,6 +219,15 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20191121035130341" modified="20191121035240128" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/full-screen" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>hide</pre>
+</div>
+<div created="20191121035151350" modified="20191121035153473" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>hide</pre>
+</div>
+<div created="20191121035135764" modified="20191121035137814" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>hide</pre>
+</div>
 <div created="20191121010924297" modified="20191121010925327" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>yes</pre>
 </div>
@@ -9684,6 +9701,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20191121035138747" modified="20191121035148674" title="$:/view" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<pre>classic</pre>
+</div>
 <div created="20191120052924192" modified="20191121010447190" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
@@ -9730,10 +9750,10 @@ tbd
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119211052677" modified="20191121032931905" tags="introduction" title="How to Contribute?" type="text/plain" revision="0" bag="default">
+<div author="Siddharth Joshi" created="20191119211052677" modified="20191121034855963" tags="introduction" title="How to Contribute?" type="text/plain" revision="0" bag="default">
 <pre>To contribute, simply click on the + button on the left panel -&gt; this creates a new 'tiddler'
 
-Once you're done editing, save your tiddler and then click the export button (the one with the upward arrow - 2nd button from the left on the top right of your tiddler) and email the tiddler to me at sjoshi804@gmail.com (I'll go ahead and add it to the wiki!)
+Once you're done editing, save your tiddler and then click the export button (the one with the upward arrow - 2nd button from the left on the top right of your tiddler) to export as a '.tid' file and email the tiddler to me at sjoshi804@gmail.com (I'll go ahead and add it to the wiki!)
 
 You can also:
 - add tags that help group your tiddler with other tiddlers and make searching easier
@@ -9800,8 +9820,8 @@ Instructions:
 # [[Functions]]
 # [[Cardinality]]</pre>
 </div>
-<div author="Siddharth Joshi" created="20191119180323660" modified="20191121010637476" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
-<pre>Hi, welcome to my ~TiddlyWiki!
+<div author="Siddharth Joshi" created="20191119180323660" modified="20191121034908978" tags="introduction" title="Welcome" type="text/plain" revision="0" bag="default">
+<pre>Hi, welcome to my TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work and that of my friends &amp; family.
 Enjoy!</pre>
 </div>
